--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,16 +8,12 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "share.png",
       "type": "image/png",
       "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
     }
   ],
+  
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
