--- a/manifest.json
+++ b/manifest.json
@@ -8,12 +8,16 @@
       "type": "image/x-icon"
     },
     {
-      "src": "share.png",
+      "src": "logo192.png",
       "type": "image/png",
       "sizes": "192x192"
+    },
+    {
+      "src": "logo512.png",
+      "type": "image/png",
+      "sizes": "512x512"
     }
   ],
-  
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
